# plop-reader

./: .clang-format  .clangd  CMakeLists.txt  Containerfile  README.md  env_set.sh
.github/workflows/: build.yaml  quality.yaml  release.yaml
packaging/: _scriptInstall.in
scripts/: generate_checksum_file.sh  generate_installer.sh
src/: application.cpp  application.h  defines.h  exceptions.h  log.cpp  log.h  main.cpp  main.h  translate.h
src/api/: wallabag_api.cpp  wallabag_api.h  wallabag_config.cpp  wallabag_config.h  wallabag_config_loader.cpp  wallabag_config_loader.h  wallabag_entities_factory.cpp  wallabag_entities_factory.h  wallabag_oauth_token.cpp  wallabag_oauth_token.h
src/database/: database.cpp  database.h
src/entities/: entry.h  epub_download.cpp  epub_download.h
src/gui/: gui.cpp  gui.h  gui_button.cpp  gui_button.h  gui_list_item_entry.cpp  gui_list_item_entry.h
src/libs/thpool/: CMakeLists.txt
src/repositories/: entry_repository.cpp  entry_repository.h  epub_download_queue_repository.cpp  epub_download_queue_repository.h
